# AMPLE-AMR

./: README.md  main_run_experiments.py  pyproject.toml  requirements.txt
configs/: warehouse_experiments.yaml
experiments/checkpoints/: qmix_Warehouse-L.pt  qmix_Warehouse-M+.pt  qmix_Warehouse-M.pt  qmix_Warehouse-S.pt  qmix_Warehouse-XL.pt
experiments/results/: ch8_hypothesis_checks.csv  ch8_mode_distribution.csv  ch8_overall_summary.csv  ch8_payments_by_task_class.csv  chapter_comparison_vs_fixed_heuristic.csv  clustered_vs_global.csv  episodes.csv  externality_diagnostics.csv  final_chapter_report.md  raw_steps.csv  scalability.csv  sensitivity_operation_modes.csv  summary.csv  summary_by_seed.csv  training_history.csv
src/ample_amr/: __init__.py  allocation.py  config.py  domain.py  environment.py  methods.py  network.py  outputs.py  qmix.py  runner.py  utility.py  utils.py  workload.py
tables/: ch8_clustered_vs_global_results.tex  ch8_externality_diagnostics.tex  ch8_failures_results.tex  ch8_heterogeneous_results.tex  ch8_network_degradation_results.tex  ch8_overall_summary.tex  ch8_peak_load_results.tex  ch8_scalability_results.tex  ch8_sensitivity_operation_modes.tex  ch8_stable_load_results.tex  clustered_results.tex  externality_results.tex  failure_results.tex  heterogeneous_results.tex  network_degradation_results.tex  peak_results.tex  scalability_results.tex  sensitivity_operation_modes.tex  stable_results.tex
tests/: conftest.py  test_allocation.py  test_domain_and_utility.py  test_integration.py  test_outputs.py  test_qmix.py
(+8 files in other folders)
