[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ample-amr"
version = "0.1.0"
description = "Reproducible simulation and experiment framework for AMPLE-AMR and C-AMPLE-AMR."
requires-python = ">=3.11"
dependencies = [
  "matplotlib",
  "networkx",
  "numpy",
  "pandas",
  "PyYAML",
  "scipy",
  "torch",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
